syntax = "proto3";

import "const.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";

package engine;

service QueueService {
    // Create Queue
    rpc CreateQueue(CreateQueueRequest) returns (Queue) {
        option (google.api.http) = {
            post: "/call_center/queues"
            body: "*"
        };
    }
    // List of Queue
    rpc SearchQueue(SearchQueueRequest) returns (ListQueue) {
        option (google.api.http) = {
            get: "/call_center/queues"
        };
    }
    // Queue item
    rpc ReadQueue(ReadQueueRequest) returns (Queue) {
        option (google.api.http) = {
            get: "/call_center/queues/{id}"
        };
    }
    // Update Queue
    rpc UpdateQueue(UpdateQueueRequest) returns (Queue) {
        option (google.api.http) = {
            put: "/call_center/queues/{id}"
            body: "*"
        };
    }
    // Remove Queue
    rpc DeleteQueue(DeleteQueueRequest) returns (Queue) {
        option (google.api.http) = {
            delete: "/call_center/queues/{id}"
        };
    }
}

message DeleteQueueRequest {
    int64 domain_id = 1;
    int64 id = 2;
}

message UpdateQueueRequest {
    int64 domain_id = 1;
    string strategy = 2;
    bool enabled = 3;
    google.protobuf.Value payload = 4;
    Lookup calendar = 5;
    int32 priority = 6;
    int32 max_calls = 7;
    int32 sec_between_retries = 8;
    string name = 9;
    int32 max_of_retry = 10;
    map<string, string> variables = 11;
    int32 timeout = 12;
    Lookup dnc_list = 13;
    int32 sec_locate_agent = 14;
    int32 type = 15;
    Lookup team = 16;
    int64 id =17;
}

message ReadQueueRequest {
    int64 domain_id = 1;
    int64 id = 2;
}

message SearchQueueRequest {
    int64 domain_id = 1;
    int32 size = 2;
    int32 page = 3;
}

message CreateQueueRequest {
    int64 domain_id = 1;
    string strategy = 2;
    bool enabled = 3;
    google.protobuf.Value payload = 4;
    Lookup calendar = 5;
    int32 priority = 6;
    int32 max_calls = 7;
    int32 sec_between_retries = 8;
    string name = 9;
    int32 max_of_retry = 10;
    map<string, string> variables = 11;
    int32 timeout = 12;
    Lookup dnc_list = 13;
    int32 sec_locate_agent = 14;
    int32 type = 15;
    Lookup team = 16;
}

message Queue {
    int64 id = 1;
    int64 domain_id = 2;
    int64 created_at = 3;
    Lookup created_by = 4;
    int64 updated_at = 5;
    Lookup updated_by = 6;

    string strategy = 7;
    bool enabled = 8;
    google.protobuf.Value payload = 9;
    Lookup calendar = 10;
    int32 priority = 11;
    int32 max_calls = 12;
    int32 sec_between_retries = 13;
    string name = 14;
    int32 max_of_retry = 15;
    map<string, string> variables = 16;
    int32 timeout = 17;
    Lookup dnc_list = 18;
    int32 sec_locate_agent = 19;
    int32 type = 20;
    Lookup team = 21;
}

message ListQueue {
    repeated Queue items = 1;
}